recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:15: error: identifier expected but ')' found.
    snowSide(levels-1, length/3.);
                                ^Koch:17: error: identifier expected but ')' found.
    snowSide(levels-1, length/3.);
                                ^